Fix public path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valentines",
-  "description": "Valentines 2025",
+  "description": "Valentines card",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,8 +12,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write .",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@react-three/drei": "^9.65.3",
@@ -31,7 +30,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^9.18.0",
-    "gh-pages": "^6.3.0",
     "postcss": "^8.4.22",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.7",
